--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Zaid Neurothrone">
+    <meta name="robots" content="noindex"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Virtual Piano</title>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
-
 <body>
 <header>
     <h1>Virtual Piano</h1>
 </header>
-
 <main>
     <div class="container">
         <div class="white-keys">
@@ -33,8 +33,6 @@
         </div>
     </div>
 </main>
-
 <script src="assets/js/main.js"></script>
-
 </body>
 </html>
